# sawtpy

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  main.py  pyproject.toml  test-metal.py
.github/: cliff.toml
.github/workflows/: agentics-maintenance.yml  ci.yml  update-docs.lock.yml  update-docs.md
src/: downloader.py  transcriber.py  vector_store.py
