[project]
name = "s2t-experiment"
version = "0.1.0"
description = "A local tool to download, transcribe and search YouTube videos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2023.11.16",
    "faster-whisper>=0.10.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1",
    "rich>=13.7.0",
    "torch>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
