[project]
name = "s2t-experiment"
version = "0.1.0"
description = "A local tool to download, transcribe and search YouTube videos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2025.12.8",
    "faster-whisper>=1.2.1",
    "chromadb>=1.5.0",
    "sentence-transformers>=3.4.1",
    "rich>=14.3.2",
    "torch>=2.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
